чёт не работает, почините пж

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Flask
 FLASK_APP=wsgi.py
+PYTHONUNBUFFERED=1
+
 FLASK_ENV=development
 SECRET_KEY=change-me
 
@@ -13,3 +15,4 @@ EXECENGINE_TIMEOUT=25
 EXECENGINE_USERNAME=admin
 EXECENGINE_PASSWORD=admin
 EXECENGINE_API_PREFIX=/v2
+ADMIN_TOKEN=123123
