--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-Flask==3.0.3
+Flask~=3.1.2
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
+Flask-Migrate~=4.1.0
 Flask-Login==0.6.3
-psycopg[binary,pool]==3.2.1
-requests==2.32.3
+psycopg[binary]==3.2.1
+requests==2.32.4
 python-dotenv==1.0.1
-gunicorn==21.2.0
+gunicorn==23.0.0
+Flask-Admin==1.6.1
+
+
+SQLAlchemy~=2.0.40
+alembic~=1.16.5
+pytest~=8.4.1
+httpx~=0.28.1
+
+
+
